# 2020-11-02-greyhound

./: .gitignore  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: lib.rs
frontend/: Cargo.toml
frontend/src/: lib.rs  native_worker.rs
server/: Cargo.toml
server/frontend/: Cargo.toml
server/frontend/src/: context.rs  job.rs  lib.rs  native_worker.rs
server/src/: main.rs
server/wasm/: app.css  app.js  bootstrap.js  index.template.ejs  package.json  webpack.config.js
src/: main.rs
