[package]
name = "greyhound-cli"
version = "0.1.0"
authors = ["Luiz Irber <luiz.irber@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.15"
env_logger = "0.7.1"
greyhound-core = { path = "../core" }
