[package]
name = "greyhound-cli"
version = "0.1.0"
authors = ["Luiz Irber <luiz.irber@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.15"
env_logger = "0.7.1"
log = "0.4.8"
rayon = "1.0"
serde_json = "1.0.56"
niffler = "2.2.0"

[dependencies.sourmash]
git = "https://github.com/dib-lab/sourmash.git"
#rev = "279441f8e3ba4fe10c96c8be4e29940cad4eee18",
branch = "greyhound"
features = ["experimental", "parallel"]
