[package]
name = "greyhound-server"
version = "0.1.0"
authors = ["Luiz Irber <luiz.irber@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.14.0"
serde = "1.0"
async-std = { version = "1.6.0", features = ["attributes"] }
greyhound-core = { path = "../core" }
sourmash = "0.10.0"
log = "0.4.8"
